Substruct Version Changelog and Update Notes
===============================================================================

VERSION 1.3.1 - 08/30/2010
---------------------------------------

Added:
  1. Lightbox.js for image previews on admin side and store.
  2. Can now drag / drop sort variations.
     - Allows you to choose what order they appear when viewing a 
       product on the store.

Updated:
  1. Substruct automatically reloads all classes in development environment
  2. Changed product code length to 100 chars
  3. Easier to override Substruct default routes with app custom ones.

Fixed:
  1. Orders are no longer written to the database for status CART unless 
     something was actually added to the shopping cart.
  2. Edge case promotion application bug squashed.
  3. Substruct migration versions not being properly applied after 
     db:bootstrap.

Upgrade steps:
  0. Upgrade your /vendor directory with the one that ships with Substruct.
  1. rake gems:build
  2. rake db:migrate:plugin NAME=substruct



VERSION 1.3 - 08/25/2010
---------------------------------------
Upgraded to Rails 2.3.8, which has been long overdue.

Besides upgrading Rails, I took the time in this release to clean up the 
content editing features and make Substruct a solid blogging and CMS.

There are many subtle UI tweaks which improve the workflow of 
generating content.

Added:
  1. TinyMCE content editor for blogging and product descriptions.
     - Provides much more non-tech friendly way to enter information.
  2. Slick image selector / uploader when editing content from TinyMCE
     - There's an image button that links to an image selection modal, 
       and you may also upload multiple images, then insert one.
  3. Vendored many required gems to simplify installation process.
     - This requires you to run rake gems:build now when deploying.

Updated:
  1. Upgraded to Rails 2.3.8
  2. Refactored the SubModal code and bumped version to 2.0
  3. Many UI tweaks
