@@ -1,10 +1,5 @@
 <!-- RIGHT -->
 <div id="right">
-	<!--
-	<%= link_to 'Create New Order', {:action => 'new'}, :class => 'button hundredfifty' %>
-	<div class="clear">&nbsp;</div>
-	-->
-
 	<%= render(:partial => 'search') %>
 
   <h1 style="margin-top:20px;">Reports</h1>
