@@ -1,4 +1,4 @@
-<h1>Search all orders by...</h1>
+<h2>Search all orders by</h2>
 
 <h4>Order #, First or Last Name</h4>
 <%= form_tag :controller => 'orders', :action => 'search' %>
