@@ -142,7 +142,6 @@
 
 	<h2>Help</h2>
 	<p class="info">If you're looking for notes, they're at the bottom of the page.</p>
-	<p class="info">Everything is on one page so you can print it out.</p>
 
 	<%= render(:partial => 'order_operations', :locals => {:order => @order})%>
 </div>
